--- a/recommender/Untitled.ipynb
+++ b/recommender/Untitled.ipynb
@@ -154,6 +154,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'__name__': '__main__',\n",
+       " '__doc__': 'Automatically created module for IPython interactive environment',\n",
+       " '__package__': None,\n",
+       " '__loader__': None,\n",
+       " '__spec__': None,\n",
+       " '__builtin__': <module 'builtins' (built-in)>,\n",
+       " '__builtins__': <module 'builtins' (built-in)>,\n",
+       " '_ih': ['',\n",
+       "  \"import numpy as np\\nfrom sklearn.decomposition import NMF\\nimport pandas as pd\\n\\n# movie, ratings by users\\ndata = [\\n    [5, 4, 1, 1, 3],\\n    [3, 2, 1, 3, 1],\\n    [3, 3, 3, 3, 5],\\n    [1, 1, 5, 4, 4],\\n]\\ncolumns = ['Titanic', 'Tiffany', 'Terminator', 'Star Trek', 'Star Wars'] #movies\\nindex = ['Ada', 'Bob', 'Steve', 'Margaret'] #users\\n\\nR = pd.DataFrame(data, index=index, columns=columns).values\\n\\n#create a model and set the hyperparameters\\n# model assumes R ~ PQ'\\nmodel = NMF(n_components=2, init='random', random_state=10)\\n\\nmodel.fit(R)\\n\\nQ = model.components_  # movie-genre matrix\\n\\nP = model.transform(R)  # user-genre matrix\\n\\nprint(model.reconstruction_err_) #reconstruction error\\n\\nnR = np.dot(P, Q)\\nprint(nR) ## The reconstructed matrix!\\n\\n# predict the hidden features for a new data point\\nquery = [[1, 2, 5, 4, 5]]\\n#in this case, a new user providing ratings for the 5 movies.\\nnew_query = model.transform(query)\\nR_pred = np.dot(new_query,Q)\\nR_pred = zip(columns, R_pred.T)\\n\\nmaximum = 0\\nfilm_recommendation = ''\\nfor each in R_pred:\\n    if each[1] > maximum:\\n        maximum = each[1]\\n        film_recommendation = each[0]\\n\\nfilm_recommendation\",\n",
+       "  'locals()'],\n",
+       " '_oh': {1: 'Terminator'},\n",
+       " '_dh': ['/Users/leona/PythonWork/Github_Projects/Movie-Recommender/recommender'],\n",
+       " 'In': ['',\n",
+       "  \"import numpy as np\\nfrom sklearn.decomposition import NMF\\nimport pandas as pd\\n\\n# movie, ratings by users\\ndata = [\\n    [5, 4, 1, 1, 3],\\n    [3, 2, 1, 3, 1],\\n    [3, 3, 3, 3, 5],\\n    [1, 1, 5, 4, 4],\\n]\\ncolumns = ['Titanic', 'Tiffany', 'Terminator', 'Star Trek', 'Star Wars'] #movies\\nindex = ['Ada', 'Bob', 'Steve', 'Margaret'] #users\\n\\nR = pd.DataFrame(data, index=index, columns=columns).values\\n\\n#create a model and set the hyperparameters\\n# model assumes R ~ PQ'\\nmodel = NMF(n_components=2, init='random', random_state=10)\\n\\nmodel.fit(R)\\n\\nQ = model.components_  # movie-genre matrix\\n\\nP = model.transform(R)  # user-genre matrix\\n\\nprint(model.reconstruction_err_) #reconstruction error\\n\\nnR = np.dot(P, Q)\\nprint(nR) ## The reconstructed matrix!\\n\\n# predict the hidden features for a new data point\\nquery = [[1, 2, 5, 4, 5]]\\n#in this case, a new user providing ratings for the 5 movies.\\nnew_query = model.transform(query)\\nR_pred = np.dot(new_query,Q)\\nR_pred = zip(columns, R_pred.T)\\n\\nmaximum = 0\\nfilm_recommendation = ''\\nfor each in R_pred:\\n    if each[1] > maximum:\\n        maximum = each[1]\\n        film_recommendation = each[0]\\n\\nfilm_recommendation\",\n",
+       "  'locals()'],\n",
+       " 'Out': {1: 'Terminator'},\n",
+       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x10ecf7898>>,\n",
+       " 'exit': <IPython.core.autocall.ZMQExitAutocall at 0x10ed69160>,\n",
+       " 'quit': <IPython.core.autocall.ZMQExitAutocall at 0x10ed69160>,\n",
+       " '_': 'Terminator',\n",
+       " '__': '',\n",
+       " '___': '',\n",
+       " '_i': \"import numpy as np\\nfrom sklearn.decomposition import NMF\\nimport pandas as pd\\n\\n# movie, ratings by users\\ndata = [\\n    [5, 4, 1, 1, 3],\\n    [3, 2, 1, 3, 1],\\n    [3, 3, 3, 3, 5],\\n    [1, 1, 5, 4, 4],\\n]\\ncolumns = ['Titanic', 'Tiffany', 'Terminator', 'Star Trek', 'Star Wars'] #movies\\nindex = ['Ada', 'Bob', 'Steve', 'Margaret'] #users\\n\\nR = pd.DataFrame(data, index=index, columns=columns).values\\n\\n#create a model and set the hyperparameters\\n# model assumes R ~ PQ'\\nmodel = NMF(n_components=2, init='random', random_state=10)\\n\\nmodel.fit(R)\\n\\nQ = model.components_  # movie-genre matrix\\n\\nP = model.transform(R)  # user-genre matrix\\n\\nprint(model.reconstruction_err_) #reconstruction error\\n\\nnR = np.dot(P, Q)\\nprint(nR) ## The reconstructed matrix!\\n\\n# predict the hidden features for a new data point\\nquery = [[1, 2, 5, 4, 5]]\\n#in this case, a new user providing ratings for the 5 movies.\\nnew_query = model.transform(query)\\nR_pred = np.dot(new_query,Q)\\nR_pred = zip(columns, R_pred.T)\\n\\nmaximum = 0\\nfilm_recommendation = ''\\nfor each in R_pred:\\n    if each[1] > maximum:\\n        maximum = each[1]\\n        film_recommendation = each[0]\\n\\nfilm_recommendation\",\n",
+       " '_ii': '',\n",
+       " '_iii': '',\n",
+       " '_i1': \"import numpy as np\\nfrom sklearn.decomposition import NMF\\nimport pandas as pd\\n\\n# movie, ratings by users\\ndata = [\\n    [5, 4, 1, 1, 3],\\n    [3, 2, 1, 3, 1],\\n    [3, 3, 3, 3, 5],\\n    [1, 1, 5, 4, 4],\\n]\\ncolumns = ['Titanic', 'Tiffany', 'Terminator', 'Star Trek', 'Star Wars'] #movies\\nindex = ['Ada', 'Bob', 'Steve', 'Margaret'] #users\\n\\nR = pd.DataFrame(data, index=index, columns=columns).values\\n\\n#create a model and set the hyperparameters\\n# model assumes R ~ PQ'\\nmodel = NMF(n_components=2, init='random', random_state=10)\\n\\nmodel.fit(R)\\n\\nQ = model.components_  # movie-genre matrix\\n\\nP = model.transform(R)  # user-genre matrix\\n\\nprint(model.reconstruction_err_) #reconstruction error\\n\\nnR = np.dot(P, Q)\\nprint(nR) ## The reconstructed matrix!\\n\\n# predict the hidden features for a new data point\\nquery = [[1, 2, 5, 4, 5]]\\n#in this case, a new user providing ratings for the 5 movies.\\nnew_query = model.transform(query)\\nR_pred = np.dot(new_query,Q)\\nR_pred = zip(columns, R_pred.T)\\n\\nmaximum = 0\\nfilm_recommendation = ''\\nfor each in R_pred:\\n    if each[1] > maximum:\\n        maximum = each[1]\\n        film_recommendation = each[0]\\n\\nfilm_recommendation\",\n",
+       " 'np': <module 'numpy' from '/Users/leona/anaconda3/lib/python3.7/site-packages/numpy/__init__.py'>,\n",
+       " 'NMF': sklearn.decomposition.nmf.NMF,\n",
+       " 'pd': <module 'pandas' from '/Users/leona/anaconda3/lib/python3.7/site-packages/pandas/__init__.py'>,\n",
+       " 'data': [[5, 4, 1, 1, 3], [3, 2, 1, 3, 1], [3, 3, 3, 3, 5], [1, 1, 5, 4, 4]],\n",
+       " 'columns': ['Titanic', 'Tiffany', 'Terminator', 'Star Trek', 'Star Wars'],\n",
+       " 'index': ['Ada', 'Bob', 'Steve', 'Margaret'],\n",
+       " 'R': array([[5, 4, 1, 1, 3],\n",
+       "        [3, 2, 1, 3, 1],\n",
+       "        [3, 3, 3, 3, 5],\n",
+       "        [1, 1, 5, 4, 4]]),\n",
+       " 'model': NMF(alpha=0.0, beta_loss='frobenius', init='random', l1_ratio=0.0,\n",
+       "   max_iter=200, n_components=2, random_state=10, shuffle=False,\n",
+       "   solver='cd', tol=0.0001, verbose=0),\n",
+       " 'Q': array([[0.33269271, 0.40382005, 1.85817237, 1.58448892, 1.66025313],\n",
+       "        [1.21182294, 0.95464402, 0.        , 0.23179031, 0.55358761]]),\n",
+       " 'P': array([[0.37573404, 4.01109432],\n",
+       "        [0.66460672, 1.97611059],\n",
+       "        [1.79113709, 2.2795383 ],\n",
+       "        [2.5580779 , 0.        ]]),\n",
+       " 'nR': array([[4.98574011, 3.98089613, 0.69817861, 1.52507923, 2.84430572],\n",
+       "        [2.61580597, 2.15486368, 1.23495386, 1.51110529, 2.19736573],\n",
+       "        [3.35829506, 2.89944467, 3.32824145, 3.36641177, 4.23566511],\n",
+       "        [0.85105386, 1.03300314, 4.75334969, 4.0532461 , 4.24705685]]),\n",
+       " 'query': [[1, 2, 5, 4, 5]],\n",
+       " 'new_query': array([[2.68231475, 0.45631224]]),\n",
+       " 'R_pred': <zip at 0x1a209b0b88>,\n",
+       " 'maximum': array([4.98420316]),\n",
+       " 'film_recommendation': 'Terminator',\n",
+       " 'each': ('Star Wars', array([4.70593025])),\n",
+       " '_1': 'Terminator',\n",
+       " '_i2': 'locals()'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locals()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
